--- a/projects.html
+++ b/projects.html
@@ -76,21 +76,21 @@
  <head></head>
  <body id="in3lu4v">
   <div id="ik1w6oa" class="container-fluid">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="icimfm4">
-    <div class="col-12" id="i4ufh1l">
-     <nav class="navbar navbar-expand-lg navbar-light" id="i2jpg1x">
-      <div class="container-fluid" id="ib7k8w9">
+   <div id="icimfm4" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="i4ufh1l" class="col-12">
+     <nav id="i2jpg1x" class="navbar navbar-expand-lg navbar-light">
+      <div id="ib7k8w9" class="container-fluid">
        <div id="toggle-e61e6ca7-84dc-4f60-b42c-e7a216f4fa68" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-e61e6ca7-84dc-4f60-b42c-e7a216f4fa68" aria-controls="collapse-e61e6ca7-84dc-4f60-b42c-e7a216f4fa68" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler border-0">
-        <span class="navbar-toggler-icon" id="i0dqrta"></span>
+        <span id="i0dqrta" class="navbar-toggler-icon"></span>
        </div>
-       <div class="div" id="i3hbaow">
-        <img id="i68774q" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a href="#" class="navbar-brand" id="iq0hikp">D Square Solar</a>
+       <div id="i3hbaow" class="div">
+        <img id="i68774q" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a href="#" id="iq0hikp" class="navbar-brand">D Square Solar</a>
        </div>
        <div id="collapse-e61e6ca7-84dc-4f60-b42c-e7a216f4fa68" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="imlshlk">
-         <li class="nav-item" id="is0sh91"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link active" id="ibpd9mo">Home</a></li>
-         <li class="nav-item" id="ixop3mk"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link active" id="iamxh3k">Projects<br></a></li>
-         <li class="nav-item" id="iixq9jt"><a aria-current="page" href="#" class="nav-link active" id="imad18w">Contact</a></li>
+        <ul id="imlshlk" class="navbar-nav me-auto mb-2 mb-lg-0">
+         <li id="is0sh91" class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ibpd9mo" class="nav-link active">Home</a></li>
+         <li id="ixop3mk" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="iamxh3k" class="nav-link active">Projects<br></a></li>
+         <li id="iixq9jt" class="nav-item"><a aria-current="page" href="#" id="imad18w" class="nav-link active">Contact</a></li>
         </ul>
         <form method="get" class="d-flex"></form>
        </div>
@@ -99,9 +99,9 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="iu3u1ek">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="iq44b2k">
-    <div class="col-12" id="ie88hfi">
+  <div id="iu3u1ek" class="container-fluid">
+   <div id="iq44b2k" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="ie88hfi" class="col-12">
      <div id="i2on03i">
       Projects
      </div>
@@ -111,53 +111,53 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="iyltw2g">
-   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3" id="i00v9pe">
-    <div class="col" id="iox1ctq">
-     <div class="div" id="ior5ef8">
-      <div class="div" id="i5vqjo9">
-       <div class="div" id="i878wdn">
+  <div id="iyltw2g" class="container-fluid">
+   <div id="i00v9pe" class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+    <div id="iox1ctq" class="col">
+     <div id="ior5ef8" class="div">
+      <div id="i5vqjo9" class="div">
+       <div id="i878wdn" class="div">
         <div id="i2ku11y">
          Ajmer
         </div>
         <div id="i6jjy59">
          <span id="i9don35">400 Kwp Rooftop MDSU</span>
         </div>
-        <div class="col" id="i8e6vmh">
+        <div id="i8e6vmh" class="col">
          <img id="iwn67tv" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png">
         </div>
        </div>
       </div>
      </div>
     </div>
-    <div class="col" id="i3tqhx4">
-     <div class="div" id="igu4ldd">
-      <div class="div" id="il2vsrx">
-       <div class="div" id="iy5il0j">
+    <div id="i3tqhx4" class="col">
+     <div id="igu4ldd" class="div">
+      <div id="il2vsrx" class="div">
+       <div id="iy5il0j" class="div">
         <div id="igottq9">
          Ajmer
         </div>
         <div id="i2tbd7q">
          <span id="i4snajh">280 Kwp Rooftop GWEC</span>
         </div>
-        <div class="col" id="if1vn83">
+        <div id="if1vn83" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="i266p1c">
         </div>
        </div>
       </div>
      </div>
     </div>
-    <div class="col" id="ifhyeng">
-     <div class="div" id="ixb2nsy">
-      <div class="div" id="ittkedy">
-       <div class="div" id="idn57rn">
+    <div id="ifhyeng" class="col">
+     <div id="ixb2nsy" class="div">
+      <div id="ittkedy" class="div">
+       <div id="idn57rn" class="div">
         <div id="i4wowlq">
          Hariyana
         </div>
         <div id="ifjo3zt">
          1 Mwp&nbsp;
         </div>
-        <div class="col" id="iugtax1">
+        <div id="iugtax1" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="iw29vxr">
         </div>
        </div>
@@ -165,45 +165,45 @@
      </div>
     </div>
    </div>
-   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mt-4" id="iyzytw8">
-    <div class="col" id="i7hbf7q">
-     <div class="div" id="iszn1ee">
-      <div class="div" id="irc4f32">
-       <div class="div" id="icg9tpg">
+   <div id="iyzytw8" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mt-4">
+    <div id="i7hbf7q" class="col">
+     <div id="iszn1ee" class="div">
+      <div id="irc4f32" class="div">
+       <div id="icg9tpg" class="div">
         <div id="iznv696">
          Baranala
         </div>
         <div id="iomg3ie">
          <span id="i0u3c8c">148 Kwp Rooftop D Mart</span>
         </div>
-        <div class="col" id="itnvnjm">
+        <div id="itnvnjm" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="i0o4x5t">
         </div>
        </div>
       </div>
      </div>
     </div>
-    <div class="col" id="ib5eefd">
-     <div class="div" id="i82cbrj">
-      <div class="div" id="ioabd4g">
-       <div class="div" id="iw1qya3">
+    <div id="ib5eefd" class="col">
+     <div id="i82cbrj" class="div">
+      <div id="ioabd4g" class="div">
+       <div id="iw1qya3" class="div">
         <div id="izmlkm6">
          Patiala
         </div>
         <div id="i3wde91">
          <span id="in7wfuu">94 Kwp D Mart </span>
         </div>
-        <div class="col" id="imei94r">
+        <div id="imei94r" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="iy4sdgq">
         </div>
        </div>
       </div>
      </div>
     </div>
-    <div class="col" id="it7vck8">
-     <div class="div" id="iqipj5l">
-      <div class="div" id="il9suof">
-       <div class="div" id="iyre5c2">
+    <div id="it7vck8" class="col">
+     <div id="iqipj5l" class="div">
+      <div id="il9suof" class="div">
+       <div id="iyre5c2" class="div">
         <div id="ittyfks">
          Andhrpradesh
         </div>
@@ -212,7 +212,7 @@
          <br>
          Group ( FSC Koka)
         </div>
-        <div class="col" id="iclrac1">
+        <div id="iclrac1" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="id98wkj">
         </div>
        </div>
@@ -220,28 +220,28 @@
      </div>
     </div>
    </div>
-   <div class="row row-cols-1 row-cols-sm-2 mt-4 row-cols-md-3" id="i2zflsk">
-    <div class="col" id="ihsodyb">
-     <div class="div" id="iui9cth">
-      <div class="div" id="iwuszpa">
-       <div class="div" id="isu1hc3">
+   <div id="i2zflsk" class="row row-cols-1 row-cols-sm-2 mt-4 row-cols-md-3">
+    <div id="ihsodyb" class="col">
+     <div id="iui9cth" class="div">
+      <div id="iwuszpa" class="div">
+       <div id="isu1hc3" class="div">
         <div id="iet0jdq">
          Sanganer, Jaipur
         </div>
         <div id="i6cxe2l">
          <span id="i4hmp3b">10 Kwp at Indian Oil Aviation Depot</span>
         </div>
-        <div class="col" id="i6b5dgl">
+        <div id="i6b5dgl" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="i0727b1">
         </div>
        </div>
       </div>
      </div>
     </div>
-    <div class="col" id="iqrvdvs">
-     <div class="div" id="i1gkwaf">
-      <div class="div" id="i7znenv">
-       <div class="div" id="i5mbjqh">
+    <div id="iqrvdvs" class="col">
+     <div id="i1gkwaf" class="div">
+      <div id="i7znenv" class="div">
+       <div id="i5mbjqh" class="div">
         <div id="igcg1bb">
          Andhrpradesh
         </div>
@@ -250,24 +250,24 @@
          <br>
          Depot Gooty
         </div>
-        <div class="col" id="inp457q">
+        <div id="inp457q" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="i2m6tsh">
         </div>
        </div>
       </div>
      </div>
     </div>
-    <div class="col" id="iutmufw">
-     <div class="div" id="ia6tmof">
-      <div class="div" id="iagk0tp">
-       <div class="div" id="izdr2hl">
+    <div id="iutmufw" class="col">
+     <div id="ia6tmof" class="div">
+      <div id="iagk0tp" class="div">
+       <div id="izdr2hl" class="div">
         <div id="ixe4jsm">
          Kakinada
         </div>
         <div id="i3bzy2a">
          <span id="ixblsr6">20 Kwp BPCL</span>
         </div>
-        <div class="col" id="ijldygs">
+        <div id="ijldygs" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="i6fczj6">
         </div>
        </div>
@@ -275,28 +275,28 @@
      </div>
     </div>
    </div>
-   <div class="row row-cols-1 row-cols-sm-2 mt-4 row-cols-md-3" id="iov37kf">
-    <div class="col" id="ix67pd8">
-     <div class="div" id="i0ms0rn">
-      <div class="div" id="i73844n">
-       <div class="div" id="ieg2nvt">
+   <div id="iov37kf" class="row row-cols-1 row-cols-sm-2 mt-4 row-cols-md-3">
+    <div id="ix67pd8" class="col">
+     <div id="i0ms0rn" class="div">
+      <div id="i73844n" class="div">
+       <div id="ieg2nvt" class="div">
         <div id="iibyhkq">
          Tanakpur
         </div>
         <div id="itcjkbt">
          <span id="i39g6gh">100 Kwp NTPC</span>
         </div>
-        <div class="col" id="i1xsvoi">
+        <div id="i1xsvoi" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="ipf6s2f">
         </div>
        </div>
       </div>
      </div>
     </div>
-    <div class="col" id="iy7ugoh">
-     <div class="div" id="iqyg7gl">
-      <div class="div" id="ii98uvo">
-       <div class="div" id="idmdxyg">
+    <div id="iy7ugoh" class="col">
+     <div id="iqyg7gl" class="div">
+      <div id="ii98uvo" class="div">
+       <div id="idmdxyg" class="div">
         <div id="if6fqsi">
          Gopalpuramod, Jaipur
         </div>
@@ -305,24 +305,24 @@
          <br>
          Depot Gooty
         </div>
-        <div class="col" id="iv3cpb5">
+        <div id="iv3cpb5" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="ie03kdh">
         </div>
        </div>
       </div>
      </div>
     </div>
-    <div class="col" id="iuexi8i">
-     <div class="div" id="ilmkgi2">
-      <div class="div" id="i4smxh2">
-       <div class="div" id="i20df6b">
+    <div id="iuexi8i" class="col">
+     <div id="ilmkgi2" class="div">
+      <div id="i4smxh2" class="div">
+       <div id="i20df6b" class="div">
         <div id="ijwi6yk">
          Kakinada
         </div>
         <div id="i0750lh">
          <span id="ilx80qw">20 Kwp BPCL</span>
         </div>
-        <div class="col" id="iivim7z">
+        <div id="iivim7z" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/icons8-arrow-50.png" id="ixa71qy">
         </div>
        </div>
@@ -331,22 +331,22 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="iygev1l">
-   <div class="container-fluid" id="ighfqav">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2" id="ikyrpcp">
-     <div class="col" id="i0iv17n">
+  <div id="iygev1l" class="container-fluid">
+   <div id="ighfqav" class="container-fluid">
+    <div id="ikyrpcp" class="row row-cols-1 row-cols-sm-2 row-cols-md-2">
+     <div id="i0iv17n" class="col">
       <div id="ixnmvpj">
        Smartest Way to Genrerate Eletricity
       </div>
      </div>
-     <div class="col" id="i6rn04x">
+     <div id="i6rn04x" class="col">
       <button type="button" id="ilov5pu">Get In Touch</button>
      </div>
     </div>
    </div>
-   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4" id="ihyoe0e">
-    <div class="col" id="i0oy9ph">
-     <div class="div" id="ig6igpr">
+   <div id="ihyoe0e" class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+    <div id="i0oy9ph" class="col">
+     <div id="ig6igpr" class="div">
       <div id="ihjywb5">
        Working Hours
       </div>
@@ -358,8 +358,8 @@
       </div>
      </div>
     </div>
-    <div class="col" id="isu8amm">
-     <div class="div" id="ira1rgg">
+    <div id="isu8amm" class="col">
+     <div id="ira1rgg" class="div">
       <div id="iny8lft">
        Office
       </div>
@@ -374,8 +374,8 @@
       </div>
      </div>
     </div>
-    <div class="col" id="ir2egrg">
-     <div class="div" id="iaigbrm">
+    <div id="ir2egrg" class="col">
+     <div id="iaigbrm" class="div">
       <div id="iwylwn4">
        Links
       </div>
@@ -390,31 +390,31 @@
       </div>
      </div>
     </div>
-    <div class="col" id="i4jn31w">
-     <div class="div" id="iv7ie8k">
+    <div id="i4jn31w" class="col">
+     <div id="iv7ie8k" class="div">
       <div id="inwxnl3">
        Get In Touch
       </div>
      </div>
-     <div class="div" id="iukxjrj">
-      <div class="div" id="if3rkla">
+     <div id="iukxjrj" class="div">
+      <div id="if3rkla" class="div">
        <img id="iy9sjbw" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/facebook.png">
       </div>
-      <div class="div" id="i7wxmgj">
+      <div id="i7wxmgj" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/twitter (1).png" id="it2cnzx">
       </div>
-      <div class="div" id="iphx7w9">
+      <div id="iphx7w9" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/internet (1).png" id="i1atdoc">
       </div>
-      <div class="div" id="ifldpni">
+      <div id="ifldpni" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/instagram (1).png" id="id0c3ba">
       </div>
      </div>
     </div>
    </div>
-   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1" id="iwniney">
-    <div class="col-12" id="i1ztar7">
-     <div class="div" id="ioqop7v">
+   <div id="iwniney" class="row row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="i1ztar7" class="col-12">
+     <div id="ioqop7v" class="div">
       <div id="izcso5k">
        AxiomThemes @ 2023. All Rights Reserved.
       </div>
