--- a/contact-us.html
+++ b/contact-us.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#io78vh{width:100%;float:none;display:flex;justify-content:flex-end;}#ikztpu{padding:10px;font-size:32px;font-weight:700;color:#0019a3;}#ijxj8m{padding:10px;}#i4dvuu{display:flex;flex-direction:column-reverse;}#ig2yr7{width:100%;}#iztrrg{width:5%;text-align:right;display:flex;justify-content:flex-start;align-items:center;padding:0px 0px 0px 0;}#iwsq84{color:black;}#iwvgj6{width:95%;}#ikhggd{padding:10px;}#i1w1zq{white-space-collapse:preserve;}#ip1njb{padding:0px 0px 0px 0px;}#i85dix{color:black;}#igfyn8{width:5%;text-align:right;display:flex;justify-content:flex-start;align-items:center;padding:0px 0px 0px 0;}#itfzy3{white-space-collapse:preserve;}#i22itn{padding:10px;}#i1immb{width:95%;}#i7rjiq{padding:0px 0px 0px 0px;}#i3ei2x{color:black;}#ix6zx4{width:5%;text-align:right;display:flex;justify-content:flex-start;align-items:center;padding:0px 0px 0px 0;}#ib8lwx{white-space-collapse:preserve;}#ia7otp{padding:10px;}#id0l9i{width:95%;}#i2rief{padding:0px 0px 0px 0px;}#iqzuyn{color:#6c6c6c;}#igd5ta{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:30px;padding:0px 0px 0px 5px;}#ih99g2{color:#6c6c6c;}#ispwoe{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:30px;padding:0 0 0 5px;}#iismv6{color:#6c6c6c;}#ibnr52{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:100px;padding:0 0 0 5px;}#i2wy8r{color:#6c6c6c;}#iecauc{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:30px;padding:0 0 0 5px;}#ixhqis{color:#6c6c6c;}#ihty65{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:30px;padding:0 0 0 5px;}#iyaam8{width:150px;height:50px;border-radius:10px 10px 10px 10px;color:#ffffff;background-color:#232323;}#iyu7x0c{color:black;height:47.25px;}#ix1098{padding:0px 0 0 0;}#ixxdvf{padding:0px 0 0 0;}@media (max-width: 380px){#ix1098{width:100%;}#iyaam8{height:40px;}}
+* { box-sizing: border-box; } body {margin: 0;}#ikztpu{padding:10px;font-size:32px;font-weight:700;color:#0019a3;}#ijxj8m{padding:10px;}#i4dvuu{display:flex;flex-direction:column-reverse;}#ig2yr7{width:100%;}#iztrrg{width:5%;text-align:right;display:flex;justify-content:flex-start;align-items:center;padding:0px 0px 0px 0;}#iwsq84{color:black;}#iwvgj6{width:95%;}#ikhggd{padding:10px;}#i1w1zq{white-space-collapse:preserve;}#ip1njb{padding:0px 0px 0px 0px;}#i85dix{color:black;}#igfyn8{width:5%;text-align:right;display:flex;justify-content:flex-start;align-items:center;padding:0px 0px 0px 0;}#itfzy3{white-space-collapse:preserve;}#i22itn{padding:10px;}#i1immb{width:95%;}#i7rjiq{padding:0px 0px 0px 0px;}#i3ei2x{color:black;}#ix6zx4{width:5%;text-align:right;display:flex;justify-content:flex-start;align-items:center;padding:0px 0px 0px 0;}#ib8lwx{white-space-collapse:preserve;}#ia7otp{padding:10px;}#id0l9i{width:95%;}#i2rief{padding:0px 0px 0px 0px;}#iqzuyn{color:#6c6c6c;}#igd5ta{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:30px;padding:0px 0px 0px 5px;}#ih99g2{color:#6c6c6c;}#ispwoe{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:30px;padding:0 0 0 5px;}#iismv6{color:#6c6c6c;}#ibnr52{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:100px;padding:0 0 0 5px;}#i2wy8r{color:#6c6c6c;}#iecauc{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:30px;padding:0 0 0 5px;}#ixhqis{color:#6c6c6c;}#ihty65{width:100%;border-radius:5px 5px 5px 5px;border:0.2px solid black;height:30px;padding:0 0 0 5px;}#iyaam8{width:150px;height:50px;border-radius:10px 10px 10px 10px;color:#ffffff;background-color:#232323;}#itxf0f{margin:100px 0 0 0;}#i47rexo{order:2;}#ify4fl6{color:black;height:47.25px;}#i8qd1mm{padding:0px 0px 0px 10px;font-weight:700;font-size:30px;}#ie632cs{display:flex;align-items:center;order:1;}#iafkenv{font-size:18px;font-weight:600;}#ixg5qbw{padding:0px 15px 0px 15px;}#iuur5hk{font-size:18px;font-weight:600;}#izn32sr{padding:0px 15px 0px 15px;}#i32s24j{font-size:18px;font-weight:600;}#iwfnono{padding:0px 0 0px 15px;}#ifv99sl{padding:0px 0 0px 0px;margin:0px 0 0 0;width:100%;display:flex;justify-content:flex-end;}#imhejay{order:2;}#io12yji{padding:0 0 0 0;}#iov6wgn{padding:0px 0 0 0;}#ib0r6qc{padding:30px 70px 30px 70px;}@media (max-width: 576px){#i47rexo{order:2;}#i8qd1mm{font-size:20px;}#imhejay{padding:30px 0px 30px 0px;}#ib0r6qc{padding:20px 20px 20px 20px;}}@media (max-width: 380px){#iyaam8{height:40px;}#i8qd1mm{font-size:15px;}}
 
 </style>
 
@@ -75,35 +75,26 @@
 		<html>
  <head></head>
  <body id="iq8w0b">
-  <div id="ixxdvf" class="container-fluid">
-   <div id="ix1098" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
-    <div id="i0kmap" class="col">
-     <nav id="iefztd" class="navbar navbar-expand-lg navbar-light">
-      <div id="i7xj9h" class="container-fluid">
-       <div id="toggle-e7c7ecb1-769b-4512-b6e4-2112631c2dea" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-e7c7ecb1-769b-4512-b6e4-2112631c2dea" aria-controls="collapse-e7c7ecb1-769b-4512-b6e4-2112631c2dea" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
+  <div class="container-fluid" id="ib0r6qc">
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div class="col-12" id="iov6wgn">
+     <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid" id="io12yji">
+       <div type="button" data-bs-toggle="collapse" data-bs-target="#collapse-cdc7c833-a447-4886-9814-cc2e8ea4081a" aria-controls="collapse-cdc7c833-a447-4886-9814-cc2e8ea4081a" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler border-0" id="i47rexo">
         <span class="navbar-toggler-icon"></span>
        </div>
-       <div id="collapse-e7c7ecb1-769b-4512-b6e4-2112631c2dea" class="collapse navbar-collapse">
-        <ul id="io78vh" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <div id="i0deo1i" class="col">
-          <img id="iyu7x0c" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="i9nqvj" class="navbar-brand">D Square Solar Services</a>
-         </div>
-         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ivhyky" class="nav-link">Home</a></li>
-         <li id="if903w" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="igrwv5" class="nav-link">About Us</a></li>
-         <li id="it57ri" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i7q1ue" class="nav-link active">Contact Us</a></li>
-         <li id="i3ozkjb" class="nav-item"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="ipzu3h4" class="nav-link">Products</a></li>
-         <li id="iu5n5qn" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="i9b9blx" class="nav-link">Projects</a></li>
-         <li class="nav-item dropdown"><a href="#" id="navbarDropdown-3" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
-          <ul aria-labelledby="navbarDropdown" id="irc4ec" class="dropdown-menu">
-           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="i9ius6" class="dropdown-item">O&amp;M</a></li>
-           <li><a href="#" id="ixp1xu" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="iffm0g" class="dropdown-item">Module Cleaning</a></li>
-           <li></li>
-           <li></li>
-          </ul></li>
+       <div class="div" id="ie632cs">
+        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png" id="ify4fl6"><a href="#" class="navbar-brand" id="i8qd1mm">D Square Solar</a>
+       </div>
+       <div class="collapse navbar-collapse" id="imhejay">
+        <ul class="navbar-nav mb-2 mb-lg-0" id="ifv99sl">
+         <li class="nav-item"></li>
+         <li class="nav-item"></li>
+         <li class="nav-item" id="ixg5qbw"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link active" id="iafkenv">Home</a></li>
+         <li class="nav-item" id="izn32sr"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link active" id="iuur5hk">Projects</a></li>
+         <li class="nav-item" id="iwfnono"><a aria-current="page" href="#" class="nav-link active" id="i32s24j">Contact</a></li>
         </ul>
-        <form method="get" class="d-flex">
-         <input type="search" placeholder="Search" aria-label="Search" class="form-control me-2"><button type="submit" class="btn btn-outline-success">Search</button>
-        </form>
+        <form method="get" class="d-flex"></form>
        </div>
       </div>
      </nav>
