--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
          <li class="nav-item"></li>
          <li id="iz3k2oh" class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iit5nk3" class="nav-link active">Home</a></li>
          <li id="i5b0x6q" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="ib1nrt3" class="nav-link active">Projects</a></li>
-         <li id="i9sbvtu" class="nav-item"><a aria-current="page" href="#" id="itobp7l" class="nav-link active">Contact</a></li>
+         <li id="i9sbvtu" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="itobp7l" class="nav-link active">Contact</a></li>
         </ul>
         <form method="get" class="d-flex"></form>
        </div>
