bf02e59f-0d6b-4f74-b466-6dad22fb7b41

--- a/contact-us.html
+++ b/contact-us.html
@@ -75,62 +75,62 @@
 		<html>
  <head></head>
  <body id="iq8w0b">
-  <div class="container-fluid" id="iodraec">
-   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1" id="i6vuyqe">
-    <div class="div" id="i7ldmkf">
-     <div class="div" id="ias8ykg">
-      <div class="div" id="ikmp1jf">
+  <div id="iodraec" class="container-fluid">
+   <div id="i6vuyqe" class="row row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="i7ldmkf" class="div">
+     <div id="ias8ykg" class="div">
+      <div id="ikmp1jf" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/time.png" id="ikg473x">
        <div id="im57byy">
         Mon - Fri 8:00 AM - 9:00 PM / Sunday - Closed
        </div>
       </div>
-      <div class="div" id="ip5vj03">
+      <div id="ip5vj03" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/phone-call.png" id="i3m2dol">
        <div id="ibtgglb">
         +91 992 9466 404
        </div>
       </div>
-      <div class="div" id="irl9nvk">
+      <div id="irl9nvk" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/location.png" id="ig14czb">
        <div id="iloy0m2">
         Jaipur, Rajasthan, India
        </div>
       </div>
      </div>
-     <div class="div" id="ivwqceg">
-      <div class="col" id="iw6jxff">
+     <div id="ivwqceg" class="div">
+      <div id="iw6jxff" class="col">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/facebook-app-symbol.png" id="igukv6g">
       </div>
-      <div class="col" id="i88lkxn">
+      <div id="i88lkxn" class="col">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/twitter.png" id="iqmmtdu">
       </div>
-      <div class="col" id="iqcr1j4">
+      <div id="iqcr1j4" class="col">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/internet.png" id="ij405p9">
       </div>
-      <div class="col" id="ib6f9im">
+      <div id="ib6f9im" class="col">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/instagram.png" id="iy7wezd">
       </div>
      </div>
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="ivnjxhh">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="i4vmbpc">
-    <div class="col col-12" id="ino74uz">
-     <nav class="navbar navbar-expand-lg navbar-light" id="ihva3tp">
-      <div class="container-fluid" id="i9vbqzi">
+  <div id="ivnjxhh" class="container-fluid">
+   <div id="i4vmbpc" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="ino74uz" class="col col-12">
+     <nav id="ihva3tp" class="navbar navbar-expand-lg navbar-light">
+      <div id="i9vbqzi" class="container-fluid">
        <div id="toggle-d34e60fc-9acd-4403-a79d-c18225e9b7bf" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-d34e60fc-9acd-4403-a79d-c18225e9b7bf" aria-controls="collapse-d34e60fc-9acd-4403-a79d-c18225e9b7bf" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler border-0">
-        <span class="navbar-toggler-icon" id="i0qm7wg"></span>
+        <span id="i0qm7wg" class="navbar-toggler-icon"></span>
        </div>
-       <div class="div" id="ioau7t3">
-        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png" id="ify4fl6"><a href="#" class="navbar-brand" id="ipp020y">D Square Solar</a>
+       <div id="ioau7t3" class="div">
+        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png" id="ify4fl6"><a href="#" id="ipp020y" class="navbar-brand">D Square Solar</a>
        </div>
        <div id="collapse-d34e60fc-9acd-4403-a79d-c18225e9b7bf" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="i0u9pjg">
-         <li class="nav-item" id="i8pnfmj"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link active" id="ibn6h6s">Home</a></li>
-         <li class="nav-item" id="iviql0j"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link active" id="i1bumnh">Projects</a></li>
-         <li class="nav-item" id="i8p0vhg"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="nav-link active" id="iy2u336">Contact</a></li>
+        <ul id="i0u9pjg" class="navbar-nav me-auto mb-2 mb-lg-0">
+         <li id="i8pnfmj" class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ibn6h6s" class="nav-link active">Home</a></li>
+         <li id="iviql0j" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="i1bumnh" class="nav-link active">Projects</a></li>
+         <li id="i8p0vhg" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="iy2u336" class="nav-link active">Contact</a></li>
         </ul>
         <form method="get" class="d-flex"></form>
        </div>
@@ -139,9 +139,9 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="i5ponnb">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="ixbw7mq">
-    <div class="col-12" id="i8u5znr">
+  <div id="i5ponnb" class="container-fluid">
+   <div id="ixbw7mq" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="i8u5znr" class="col-12">
      <div id="iy5ao2b">
       Contact
      </div>
@@ -151,17 +151,17 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="if1br73">
-   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1" id="iorf8nq">
-    <div class="col" id="ivcsjga">
+  <div id="if1br73" class="container-fluid">
+   <div id="iorf8nq" class="row row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="ivcsjga" class="col">
      <iframe frameborder="0" id="iqf3781" src="https://maps.google.com/maps?&amp;q=jaipur&amp;z=16&amp;t=q&amp;output=embed"></iframe>
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="ihup2td">
-   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2" id="i1ppkev">
-    <div class="col" id="i5la4xb">
-     <div class="div" id="i07g79b">
+  <div id="ihup2td" class="container-fluid">
+   <div id="i1ppkev" class="row row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <div id="i5la4xb" class="col">
+     <div id="i07g79b" class="div">
       <div id="irrgqtk">
        GET IN TOUCH
       </div>
@@ -171,24 +171,24 @@
       <div id="ijl9qf2">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
       </div>
-      <div class="div" id="ifnpdtw">
-       <div class="div" id="ipdehyu">
+      <div id="ifnpdtw" class="div">
+       <div id="ipdehyu" class="div">
         <img id="ibolc6d" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/call.png">
        </div>
        <div id="iya3gsf">
         +91 992-9466-404
        </div>
       </div>
-      <div class="div" id="i8ariig">
-       <div class="div" id="inctvf6">
+      <div id="i8ariig" class="div">
+       <div id="inctvf6" class="div">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/letter.png" id="ihhjdij">
        </div>
        <div id="i723goi">
         needhelp@company.com
        </div>
       </div>
-      <div class="div" id="id2xs6q">
-       <div class="div" id="i6v95u7">
+      <div id="id2xs6q" class="div">
+       <div id="i6v95u7" class="div">
         <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/pin.png" id="i18jqig">
        </div>
        <div id="iba3bdv">
@@ -197,26 +197,26 @@
       </div>
      </div>
     </div>
-    <div class="col" id="ihm7sq3">
+    <div id="ihm7sq3" class="col">
      <input type="text" id="igce2ke" placeholder="Your Name"><input type="text" placeholder="Your Email" id="ix9k48f"><input type="text" placeholder="Your Subject" id="icf94k9"><textarea id="i10txyl" placeholder="Your Message"></textarea><button type="button" id="i3x96gi">Send a Message</button>
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="iwyjnxu">
-   <div class="container-fluid" id="i07wd2l">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2" id="ivg2p7k">
+  <div id="iwyjnxu" class="container-fluid">
+   <div id="i07wd2l" class="container-fluid">
+    <div id="ivg2p7k" class="row row-cols-1 row-cols-sm-2 row-cols-md-2">
      <div class="col">
       <div id="ifglmcl">
        Smartest Way to Genrerate Eletricity
       </div>
      </div>
-     <div class="col" id="ikykbdh">
+     <div id="ikykbdh" class="col">
       <button type="button" id="ivztq1k">Get In Touch</button>
      </div>
     </div>
    </div>
    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-    <div class="col" id="i4dlzzx">
+    <div id="i4dlzzx" class="col">
      <div class="div">
       <div id="iynetag">
        Working Hours
@@ -229,7 +229,7 @@
       </div>
      </div>
     </div>
-    <div class="col" id="iv1qh6l">
+    <div id="iv1qh6l" class="col">
      <div class="div">
       <div id="isy5s4g">
        Office
@@ -245,7 +245,7 @@
       </div>
      </div>
     </div>
-    <div class="col" id="ip5zohv">
+    <div id="ip5zohv" class="col">
      <div class="div">
       <div id="i8zq225">
        Links
@@ -261,29 +261,29 @@
       </div>
      </div>
     </div>
-    <div class="col" id="i9878a3">
+    <div id="i9878a3" class="col">
      <div class="div">
       <div id="i14poqs">
        Get In Touch
       </div>
      </div>
-     <div class="div" id="i3trr14">
-      <div class="div" id="i63cdkg">
+     <div id="i3trr14" class="div">
+      <div id="i63cdkg" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/facebook.png" id="ivi2qcl">
       </div>
-      <div class="div" id="i8k8ggj">
+      <div id="i8k8ggj" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/twitter (1).png" id="is3ay4u">
       </div>
-      <div class="div" id="ierm4rp">
+      <div id="ierm4rp" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/internet (1).png" id="il615ed">
       </div>
-      <div class="div" id="ioimt6w">
+      <div id="ioimt6w" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/instagram (1).png" id="ibqc0bf">
       </div>
      </div>
     </div>
    </div>
-   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1" id="i66mcf2">
+   <div id="i66mcf2" class="row row-cols-1 row-cols-sm-2 row-cols-md-1">
     <div class="col-12">
      <div class="div">
       <div id="ilx6x0w">
