--- a/projects.html
+++ b/projects.html
@@ -75,62 +75,62 @@
 		<html>
  <head></head>
  <body id="in3lu4v">
-  <div class="container-fluid" id="i77oxo1">
-   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1" id="i2phk38">
-    <div class="div" id="i3a9cdo">
-     <div class="div" id="ieytb14">
-      <div class="div" id="i5z9hi8">
+  <div id="i77oxo1" class="container-fluid">
+   <div id="i2phk38" class="row row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="i3a9cdo" class="div">
+     <div id="ieytb14" class="div">
+      <div id="i5z9hi8" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/time.png" id="ijqrstx">
        <div id="iainh9i">
         Mon - Fri 8:00 AM - 9:00 PM / Sunday - Closed
        </div>
       </div>
-      <div class="div" id="iyh0bon">
+      <div id="iyh0bon" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/phone-call.png" id="iiqhal1">
        <div id="i3yp206">
         +91 992 9466 404
        </div>
       </div>
-      <div class="div" id="ioop5ih">
+      <div id="ioop5ih" class="div">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/location.png" id="ib3s4yh">
        <div id="iw671qz">
         Jaipur, Rajasthan, India
        </div>
       </div>
      </div>
-     <div class="div" id="ioqf0hi">
-      <div class="col" id="id2ntyf">
+     <div id="ioqf0hi" class="div">
+      <div id="id2ntyf" class="col">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/facebook-app-symbol.png" id="ihuy16g">
       </div>
-      <div class="col" id="id1bt6o">
+      <div id="id1bt6o" class="col">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/twitter.png" id="ie0mlh2">
       </div>
-      <div class="col" id="i705tej">
+      <div id="i705tej" class="col">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/internet.png" id="i95ez92">
       </div>
-      <div class="col" id="iqgb8r4">
+      <div id="iqgb8r4" class="col">
        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/instagram.png" id="idgs4kl">
       </div>
      </div>
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="i8wwuk8">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="inf2f2m">
-    <div class="col col-12" id="inewfcw">
-     <nav class="navbar navbar-expand-lg navbar-light" id="i4hymb3">
-      <div class="container-fluid" id="iz0qwqg">
+  <div id="i8wwuk8" class="container-fluid">
+   <div id="inf2f2m" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="inewfcw" class="col col-12">
+     <nav id="i4hymb3" class="navbar navbar-expand-lg navbar-light">
+      <div id="iz0qwqg" class="container-fluid">
        <div id="toggle-fd932293-6035-4682-afd0-b573e0e08d6a" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-fd932293-6035-4682-afd0-b573e0e08d6a" aria-controls="collapse-fd932293-6035-4682-afd0-b573e0e08d6a" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler border-0">
-        <span class="navbar-toggler-icon" id="iavc6ar"></span>
+        <span id="iavc6ar" class="navbar-toggler-icon"></span>
        </div>
-       <div class="div" id="i7juzxr">
-        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png" id="i88w57c"><a href="#" class="navbar-brand" id="ix254z3">D Square Solar</a>
+       <div id="i7juzxr" class="div">
+        <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png" id="i88w57c"><a href="#" id="ix254z3" class="navbar-brand">D Square Solar</a>
        </div>
        <div id="collapse-fd932293-6035-4682-afd0-b573e0e08d6a" class="collapse navbar-collapse">
-        <ul class="navbar-nav mb-2 mb-lg-0" id="ii9imbv">
-         <li class="nav-item" id="i8zx1b4"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link active" id="ivhxcyw">Home</a></li>
-         <li class="nav-item" id="i3sl4rf"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link active" id="im1bfdu">Projects<br></a></li>
-         <li class="nav-item" id="iayzplu"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="nav-link active" id="idkkgoj">Contact</a></li>
+        <ul id="ii9imbv" class="navbar-nav mb-2 mb-lg-0">
+         <li id="i8zx1b4" class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ivhxcyw" class="nav-link active">Home</a></li>
+         <li id="i3sl4rf" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="im1bfdu" class="nav-link active">Projects<br></a></li>
+         <li id="iayzplu" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="idkkgoj" class="nav-link active">Contact</a></li>
         </ul>
         <form method="get" class="d-flex"></form>
        </div>
